--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,11 @@
 <html>
   <head>
     <title>Myrecipes</title>
+   <link rel="stylesheet" href="/css/bootstrap.css">
+    <script src="/assets/jquery.js" type="text/javascript"></script>
+    <script src="/assets/jquery_ujs.js" type="text/javascript"></script>
+    <script src="/js/bootstrap.min.js" type="text/javascript"></script>
+<
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,6 +15,9 @@
   </head>
 
   <body>
+  <div class="container">
+    <%= render 'layouts/navigation' %>
     <%= yield %>
+    </div>
   </body>
 </html>
